--- a/app/src/main/res/layout/fragment_renwu.xml
+++ b/app/src/main/res/layout/fragment_renwu.xml
@@ -8,17 +8,16 @@
     <nari.app.BianDianYingYong.customview.PullToRefreshLayout
         android:id="@+id/pf_fragment_renwu"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="match_parent" >
 
-        <!-- android:dividerHeight="@dimen/dimen_10" -->
 
         <ListView
+            android:layout_marginBottom="10dp"
             android:id="@+id/lv_fragment_renwu"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:cacheColorHint="@color/transparent"
             android:divider="@null"
             android:scrollbars="none" />
     </nari.app.BianDianYingYong.customview.PullToRefreshLayout>
-
 </LinearLayout>
