--- a/app/src/main/res/drawable/tab_backgroud_select.xml
+++ b/app/src/main/res/drawable/tab_backgroud_select.xml
@@ -2,10 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
     <solid android:color="#0098FC" />
 
-    <!--<corners
+    <corners
         android:bottomLeftRadius="5dp"
-        android:bottomRightRadius="5dp"
         android:topLeftRadius="5dp"
-        android:topRightRadius="5dp"
-         />-->
+         />
 </shape>
